--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,23 +2,23 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.disarm.sanna.pdm">
+
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
-
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CLEAR_APP_CACHE" />
-
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission-sdk-23 android:name="android.permission.WRITE_SETTINGS" />
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
+    <uses-permission-sdk-23 android:name="android.permission.WRITE_SETTINGS" />
+
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
@@ -27,67 +27,69 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths" />
+        </provider>
+
         <activity
             android:name=".SplashActivity"
-            android:windowSoftInputMode="stateHidden|adjustUnspecified"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="stateHidden|adjustUnspecified">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Navigation">
+        </activity>
 
         <activity
-            android:name="com.disarm.sanna.pdm.ShareActivity"
-            android:label="@string/app_name">
-        </activity>
-
-        <activity android:name=".SelectCategoryActivity"
-            android:label="@string/app_name">
-        </activity>
-
-        <activity android:name=".SocialShareActivity"
-            android:label="@string/app_name">
-        </activity>
-
+            android:name=".ShareActivity"
+            android:label="@string/app_name"></activity>
+        <activity
+            android:name=".SelectCategoryActivity"
+            android:label="@string/app_name"></activity>
+        <activity
+            android:name=".SocialShareActivity"
+            android:label="@string/app_name"></activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".ActivityList"
-            android:windowSoftInputMode="stateHidden|adjustPan"
-            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
-        </activity>
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
+            android:windowSoftInputMode="stateHidden|adjustPan"></activity>
         <activity
             android:name=".Capture.Photo"
-            android:theme="@style/AppCompatAlertDialogStyle"
-            >
-        </activity>
+            android:theme="@style/AppCompatAlertDialogStyle"></activity>
         <activity
             android:name=".Capture.Video"
-            android:theme="@style/AppCompatAlertDialogStyle"
-            >
-        </activity>
+            android:theme="@style/AppCompatAlertDialogStyle"></activity>
         <activity
-            android:label="Record Audio"
             android:name=".Capture.AudioCapture"
-            android:theme="@style/Theme.AppCompat.Light.Dialog"
-            >
-        </activity>
+            android:label="Record Audio"
+            android:theme="@style/Theme.AppCompat.Light.Dialog"></activity>
         <activity
-            android:label="@string/allow_setting"
             android:name=".WriteSettingActivity"
-            android:theme="@style/AppTheme"
-            >
-        </activity>
+            android:label="@string/allow_setting"
+            android:theme="@style/AppTheme"></activity>
+
+
         <service
             android:name=".Service.SyncService"
             android:enabled="true"
             android:exported="true" />
         <service android:name=".DisarmConnect.MyService" />
+
+
     </application>
 
 </manifest>
